<resources>
    <string name="app_name">Foody</string>
    <string name="dang_nhap_mat_khau">Mật khẩu</string>
    <string name="dang_nhap_email">Email</string>
    <string name="dang_nhap_button">Đăng nhập</string>
    <string name="or">Hoặc</string>
    <string name="facebook_app_id">1978354505781259</string>
    <string name="quen_mat_khau">Quên mật khẩu</string>
    <string name="dang_ky_button">Đăng ký</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="quen_mat_khau_button">Gửi</string>
    <string name="email_can_khoi_phuc">Email cần khôi phục</string>
    <string name="o_dau">Ở đâu</string>
    <string name="an_gi">Ăn gì</string>
</resources>
