<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounddangnhap"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:background="#80ff8282"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/foodytext"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/dang_nhap_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/background_button"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/dang_nhap_email"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            />
        <EditText
            android:id="@+id/dang_nhap_mat_khau_edit_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/dang_nhap_mat_khau"
            android:paddingLeft="20dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_outline"
            android:drawablePadding="10dp"
            />

        <Button
            android:id="@+id/dang_nhap_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button"
            android:text="@string/dang_nhap_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >
            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/dang_nhap_google_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/dang_nhap_facebook_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAlignment="center"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/dang_nhap_quen_mat_khau_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quen_mat_khau"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:layout_marginBottom="40dp"
        />
    <TextView
        android:id="@+id/dang_nhap_dang_ky_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Đăng ký"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="40dp"
        />
</RelativeLayout>

